InspectionObject Services and configuration changes for the WebApp. New exception handling in @ControllerAdvice.

--- a/Server/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/Server/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -4,3 +4,6 @@ signup.success=Congratulations {0}! You have successfully signed up.
 # Validation messages
 notBlank.message = The value may not be empty!
 email.message = The value must be a valid email!
+error.no.inspectionobject.with.id = No inspection object with ID "{0}" found.
+error.no.inspectionobject.with.customername = No inspection object with customer name "{0}" found.
+error.no.inspectionobjects = No inspection objects found.
