Bug fixing and further implementation of the Assignment Service

--- a/Server/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/Server/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -4,6 +4,25 @@ signup.success=Congratulations {0}! You have successfully signed up.
 # Validation messages
 notBlank.message = The value may not be empty!
 email.message = The value must be a valid email!
+
+
+# Inspection Object service messages
 error.no.inspectionobject.with.id = No inspection object with ID "{0}" found.
 error.no.inspectionobject.with.customername = No inspection object with customer name "{0}" found.
+error.no.inspectionobject.with.objectname = No inspection object with object name "{0}" found.
 error.no.inspectionobjects = No inspection objects found.
+
+# Assignment service messages
+error.no.assignment.with.id = No assignment with ID "{0}" found.
+error.no.assignments = No assignments found.
+error.no.assignment.with.name = No assignment with name "{0}" found.
+error.assignment.invalid.user.ref = Invalid user reference.
+error.assignment.invalid.inspection.object.ref = Invalid inspection object reference.
+error.assignment.invalid.attachment.ref = Object contains and invalid attachment reference.
+error.assignment.invalid.template.attr = The attribute "{0}" cannot be entered for a template assignment.
+error.assignment.duplicate.name_id = An assignment with the id "{0}" or name "{1}" already exists.
+error.assignment.duplicate.name = An assignment with the name "{0}" already exists.
+
+
+# File upload service messages
+error.empty.file.uploaded = The file that was uploaded is empty.
