Reconfiguration of pom files for HTML5 client setup

--- a/Server/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/Server/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -22,6 +22,7 @@ error.assignment.invalid.attachment.ref = Object contains and invalid attachment
 error.assignment.invalid.template.attr = The attribute "{0}" cannot be entered for a template assignment.
 error.assignment.duplicate.name_id = An assignment with the id "{0}" or name "{1}" already exists.
 error.assignment.duplicate.name = An assignment with the name "{0}" already exists.
+error.assignment.no.task.with.id = The assignment "{0}" does not have a task with id "{1}".
 
 
 # File upload service messages
