Implementation of User validation, changed User service URI and implementation of new tests

--- a/Server/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/Server/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -27,3 +27,16 @@ error.assignment.no.task.with.id = The assignment "{0}" does not have a task wit
 
 # File upload service messages
 error.empty.file.uploaded = The file that was uploaded is empty.
+
+# User service messages
+error.no.user.with.id = No user with ID "{0}" was found.
+error.no.user.with.lastname = No user with last name "{0}" was found.
+error.no.user.with.username =  No user with username "{0}" was found.
+error.user.missing.mandatory.parameters = The following parameters are required "{0}".
+error.user.missing.mandatory.parameter.username = The parameter username is required.
+error.user.missing.mandatory.parameter.password = The parameter password is required.
+error.user.missing.mandatory.parameter.email = The parameter email is required.
+error.user.missing.mandatory.parameter.role = The parameter role is required.
+error.user.invalid.parameter.email = The parameter email is not valid.
+error.user.duplicate.username = The username "{0}" already exist, please try using another username.
+error.user.duplicate.email = The email "{0}" is already assigned to another user, please provide another email.
