Added file upload support for inspection objects. Fixed bugs for deletion of attachments for assignmentService.

--- a/Server/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/Server/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -23,7 +23,14 @@ error.assignment.invalid.template.attr = The attribute "{0}" cannot be entered f
 error.assignment.duplicate.name_id = An assignment with the id "{0}" or name "{1}" already exists.
 error.assignment.duplicate.name = An assignment with the name "{0}" already exists.
 error.assignment.no.task.with.id = The assignment "{0}" does not have a task with id "{1}".
+error.assignment.missing.mandatory.parameter = The following parameters are required "{0}".
 
+
+# Inspection Object service messages
+error.inspobject.invalid.attachment.ref = Object contains and invalid attachment reference.
+error.inspobject.duplicate.name_id = An inspection object with the id "{0}" or object name "{1}" already exists.
+error.inspobject.duplicate.name = An inspection object with the object name "{0}" already exists.
+error.inspobject.missing.mandatory.parameter = The following parameters are required "{0}".
 
 # File upload service messages
 error.empty.file.uploaded = The file that was uploaded is empty.
