--- a/Server/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/Server/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -23,7 +23,9 @@ error.assignment.invalid.template.attr = The attribute "{0}" cannot be entered f
 error.assignment.duplicate.name_id = An assignment with the id "{0}" or name "{1}" already exists.
 error.assignment.duplicate.name = An assignment with the name "{0}" already exists.
 error.assignment.no.task.with.id = The assignment "{0}" does not have a task with id "{1}".
+error.no.assignment.with.user_id = There is no assignment with the assigned user id "{0}"
 error.assignment.missing.mandatory.parameter = The following parameters are required "{0}".
+error.assignment.invalid.state = The state "{0}" is not valid.
 
 
 # Inspection Object service messages
