Added task state validation.

--- a/Server/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/Server/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -26,6 +26,7 @@ error.assignment.no.task.with.id = The assignment "{0}" does not have a task wit
 error.no.assignment.with.user_id = There is no assignment with the assigned user id "{0}"
 error.assignment.missing.mandatory.parameter = The following parameters are required "{0}".
 error.assignment.invalid.state = The state "{0}" is not valid.
+error.assignment.invalid.task.state = The state "{0}" of task "{1}" is not valid.
 
 
 # Inspection Object service messages
