Implementation of Asignment version validation.

--- a/Server/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/Server/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -27,6 +27,8 @@ error.no.assignment.with.user_id = There is no assignment with the assigned user
 error.assignment.missing.mandatory.parameter = The following parameters are required "{0}".
 error.assignment.invalid.state = The state "{0}" is not valid.
 error.assignment.invalid.task.state = The state "{0}" of task "{1}" is not valid.
+error.assignment.updated.version.available = The version of the assignment "{0}" does not correspond with the version in the database.
+error.assignment.invalid.user.to.modify = You are not allowed to modify the assignment "{0}".
 
 
 # Inspection Object service messages
