Assignment version validation implementation - validation when the assignment is closed

--- a/Server/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/Server/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -29,6 +29,7 @@ error.assignment.invalid.state = The state "{0}" is not valid.
 error.assignment.invalid.task.state = The state "{0}" of task "{1}" is not valid.
 error.assignment.updated.version.available = The version of the assignment "{0}" does not correspond with the version in the database.
 error.assignment.invalid.user.to.modify = You are not allowed to modify the assignment "{0}".
+error.assignment.finished = The assignment "{0}" is already finished and it is not possible to be modified.
 
 
 # Inspection Object service messages
