Implementation of mail feature: - Send email to admin when an assignment is created, finished or modfied - Send email to user when an assignment is assigned to him/her - Send email with password for remember password controller

--- a/Server/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/Server/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -53,3 +53,16 @@ error.user.missing.mandatory.parameter.role = The parameter role is required.
 error.user.invalid.parameter.email = The parameter email is not valid.
 error.user.duplicate.username = The username "{0}" already exist, please try using another username.
 error.user.duplicate.email = The email "{0}" is already assigned to another user, please provide another email.
+
+# Email messages
+email.subject.new.assignment.assigned = You have a new assignment
+email.subject.assignment.modified = An assignment was modified
+email.message.new.assignment.assigned = The assignment '{0}' was assigned to you.
+email.message.assignment.modified = The following assignment was modified.
+email.subject.new.assignment.created = New assignment created
+email.message.new.assignment.created = The following assignment was created.
+email.message.dear = Dear: {0}\n
+email.message.message = Message: {0}
+email.message.assignment.details.header = ----- Assignment details ----- \n 
+email.message.password = Your password is the following: \n\n\n
+email.subject.password = Password reminder
