Fix issue realted with the message The assignment {0} was assigned to you.

--- a/Server/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/Server/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -57,7 +57,7 @@ error.user.duplicate.email = The email "{0}" is already assigned to another user
 # Email messages
 email.subject.new.assignment.assigned = You have a new assignment
 email.subject.assignment.modified = An assignment was modified
-email.message.new.assignment.assigned = The assignment '{0}' was assigned to you.
+email.message.new.assignment.assigned = The assignment "{0}" was assigned to you.
 email.message.assignment.modified = The following assignment was modified.
 email.subject.new.assignment.created = New assignment created
 email.message.new.assignment.created = The following assignment was created.
