Fix issues related with null isTemplate and null user details in assignment

--- a/Server/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/Server/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -30,6 +30,8 @@ error.assignment.invalid.task.state = The state "{0}" of task "{1}" is not valid
 error.assignment.updated.version.available = The version of the assignment "{0}" does not correspond with the version in the database.
 error.assignment.invalid.user.to.modify = You are not allowed to modify the assignment "{0}".
 error.assignment.finished = The assignment "{0}" is already finished and it is not possible to be modified.
+error.assignment.startdate.enddate.invalid = The start date of the assignment must be before or the same than end date.
+error.assignment.unexpected = An unexpected error happened in the server, please contact the server team.
 
 
 # Inspection Object service messages
