--- a/Server/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/Server/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -55,6 +55,7 @@ error.user.missing.mandatory.parameter.role = The parameter role is required.
 error.user.invalid.parameter.email = The parameter email is not valid.
 error.user.duplicate.username = The username "{0}" already exist, please try using another username.
 error.user.duplicate.email = The email "{0}" is already assigned to another user, please provide another email.
+error.user.or.mail.not.valid = The username "{0}" or email "{1}" does not exist.
 
 # Email messages
 email.subject.new.assignment.assigned = You have a new assignment
