Added error messages for asssignment and user service.

--- a/Server/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/Server/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -24,6 +24,7 @@ error.assignment.duplicate.name_id = An assignment with the id "{0}" or name "{1
 error.assignment.duplicate.name = An assignment with the name "{0}" already exists.
 error.assignment.no.task.with.id = The assignment "{0}" does not have a task with id "{1}".
 error.no.assignment.with.user_id = There is no assignment with the assigned user id "{0}"
+error.no.assignment.with.inspobj_id = There is no assignment with the assigned inspection object id "{0}"
 error.assignment.missing.mandatory.parameter = The following parameters are required "{0}".
 error.assignment.invalid.state = The state "{0}" is not valid.
 error.assignment.invalid.task.state = The state "{0}" of task "{1}" is not valid.
@@ -34,11 +35,13 @@ error.assignment.startdate.enddate.invalid = The start date of the assignment mu
 error.assignment.unexpected = An unexpected error happened in the server, please contact the server team.
 
 
+
 # Inspection Object service messages
 error.inspobject.invalid.attachment.ref = Object contains and invalid attachment reference.
 error.inspobject.duplicate.name_id = An inspection object with the id "{0}" or object name "{1}" already exists.
 error.inspobject.duplicate.name = An inspection object with the object name "{0}" already exists.
 error.inspobject.missing.mandatory.parameter = The following parameters are required "{0}".
+error.inspobject.assigned.in.assignments = The inspection object id "{0}" is still assigned in assignments and cannot be deleted.
 
 # File upload service messages
 error.empty.file.uploaded = The file that was uploaded is empty.
@@ -56,6 +59,7 @@ error.user.invalid.parameter.email = The parameter email is not valid.
 error.user.duplicate.username = The username "{0}" already exist, please try using another username.
 error.user.duplicate.email = The email "{0}" is already assigned to another user, please provide another email.
 error.user.or.mail.not.valid = The username "{0}" or email "{1}" does not exist.
+error.user.assigned.in.assignments = The user id "{0}" is still assigned in assignments and cannot be deleted.
 
 # Email messages
 email.subject.new.assignment.assigned = You have a new assignment
